removed module-info.java, can make 3 jarfiles (windows, mac-ARM, mac-X86)